--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ footer {
 	color: white;
 	text-align: center;
 	margin: 10px;
+	font-size: 0.5em;
 }
 
 .class_baniere{
@@ -175,4 +176,34 @@ a:focus{ 									/* S'active sur Tab */
 	border-radius: 5px;
 	height: 60px;
 	width: 120px;
+}
+
+caption {
+	caption-side: bottom;
+	font-size: 0.8em;
+}
+
+table {
+	border-collapse: collapse;
+	margin: auto;
+}
+
+td, th {
+	width: 120px;
+	border: 1px solid black;
+	padding: 5px
+}
+
+input {
+	font-family: "Arial", sans-serif;
+	font-size: 1em;
+}
+
+textarea {
+	font-family: "Arial", sans-serif;
+	font-size: 1em;
+	width: 300px;
+	height: 100px;
+	margin-left: 109px;
+	margin-top: -22px;
 }
