--- a/Styles/style_feuilles.css
+++ b/Styles/style_feuilles.css
@@ -1,17 +1,20 @@
 
 .class_table {
-	background-image: url("../Images/fond_bois_large.jpg");
-	border-radius: 100px;
+	background-image: url("../Images/fond_bois2_moyen.jpg");
+	/* border-radius: 100px; */
 	padding-top: 0px;
 	padding-bottom: 80px;
-	margin: 0px;
-	border: 10px solid rgb(20, 19, 15);
+	margin-left: -40px;
+	margin-right: -40px;
+	border: 1px solid rgb(20, 19, 15);
+	display: flex;
+	justify-content: center;
 }
 
 .class_tas_feuilles {
 	display: flex;			/* Passage en mode flex (container) */
 	flex-direction: row;	/* Alligner les divs en lignes ou colonne */
-	margin-left: 100px;
+	margin-left: 0px;
 	margin-top: 100px;
 }
 
@@ -53,6 +56,10 @@
 
 .class_feuille1:hover, .class_feuille2:hover, .class_feuille3:hover, .class_feuille4:hover { 	
 	border: 5px solid red;
-	color: red;S
+	color: red;
 	
+}
+
+.class_tas_feuilles a {
+	text-decoration: none;
 }
