Tentative bugfix CV mini.

--- a/Styles/style_feuilles.css
+++ b/Styles/style_feuilles.css
@@ -32,7 +32,7 @@
 .class_feuille5 {
 	
 	border: 5px solid rgb(234, 234, 234);
-	background-image: url("../Images/CVmini.jpg");
+	background-image: url("../Images/CV_mini.jpg");
 	width: 207px;
 	height: 357px;
 	padding-left: 30px;
