Développement page formation

--- a/Styles/style_feuilles.css
+++ b/Styles/style_feuilles.css
@@ -1,3 +1,6 @@
+/*-----------------------------------------------------------*/
+/* Fichier style CSS pour les feuilles sur la page d'accueil */
+/*-----------------------------------------------------------*/
 
 .class_table {
 	background-image: url("../Images/fond_bois2_moyen.jpg");
