--- a/Styles/style_global.css
+++ b/Styles/style_global.css
@@ -1,8 +1,11 @@
-/* Fichier style CSS pour mon site web */
+/*--------------------------*/
+/* Fichier style CSS global */
+/*--------------------------*/
+
 body {
 	font-family: "Arial", sans-serif;
 	font-size: 1.2em;
-	background-color: rgb(230, 230, 240);
+	background-color: rgb(235, 245, 251);
 	margin: 30px;
 }
 
