--- a/Styles/style_pages.css
+++ b/Styles/style_pages.css
@@ -29,6 +29,7 @@ a:hover {
 	/* background-color: rgb( 133, 193, 233 ); */
 	/* background-color: rgb( 143, 203, 243 ); */
 	border-left: 3px solid rgb(50, 150, 220);
+	/* border-right: 3px solid rgb(50, 150, 220); */
 	border-radius: 20px;
 	margin-top: 2em;
 	margin-bottom: 2em;
